fix and break scrollbar

--- a/gtk-3.0/scrollbar.css
+++ b/gtk-3.0/scrollbar.css
@@ -94,7 +94,7 @@ scrollbar.vertical button {
 
 /* --- scrollbar position for border --- */
 
-notebook scrolledwindow,
+notebook scrolledwindow.frame,
 scrolledwindow.frame {
 	border: 1px solid @nb_border;
 }
@@ -107,44 +107,44 @@ scrolledwindow.frame scrollbar {
 	background: @theme_bg;
 }
 
+notebook scrolledwindow.frame scrollbar {
+	background: @nb_bg;
+}
+
 scrolledwindow scrollbar.vertical {
-	margin: 0 0 -22px -3px;
-	padding: 0 0 21px 3px;
+	margin: 0 0 -30px -3px;
+	padding: 0 0 29px 3px;
 	border: 0;
 }
 
 notebook scrollbar.vertical,
 scrolledwindow.frame scrollbar.vertical {
-	margin: -1px -1px -22px -3px;
-	padding: 0 0 21px 3px;
+	margin: -1px -1px -30px -3px;
+	padding: 0 0 29px 3px;
 	border: 0;
 	border-left: 1px solid @nb_border;
 }
 
+scrolledwindow treeview + scrollbar.horizontal + scrollbar.vertical {
+	margin: -29px -1px -30px -3px;
+	padding: 1px 0 29px 3px;
+}
+
 scrolledwindow scrollbar.horizontal {
-	margin: -3px -22px 0 0;
-	padding: 3px 21px 0 0;
+	margin: -3px -30px 0 0;
+	padding: 3px 29px 0 0;
 	border: 0;
 }
 
 notebook scrollbar.horizontal,
 scrolledwindow.frame scrollbar.horizontal {
-	margin: -3px -22px -1px -1px;
-	padding: 3px 21px 0 0;
+	margin: -3px -30px -1px -1px;
+	padding: 3px 29px 0 0;
 	border: 0;
 	border-top: 1px solid @nb_border;
 }
 
-notebook scrollbar.horizontal:not(:last-child) {
+scrolledwindow.frame treeview + scrollbar.horizontal {
 	margin: -3px -1px -1px -1px;
 	padding: 3px 0 0 0;
-}
-
-scrolledwindow treeview + scrollbar.horizontal + scrollbar.vertical {
-	margin: -28px 0 0 -3px;
-	padding: 1px 0 0 3px;
-}
-
-scrolledwindow.frame treeview + scrollbar.horizontal + scrollbar.vertical {
-	margin: -29px -1px -1px -3px;
 }
